# CMakeList.txt : CMake project for unique_lock, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("unique_lock")

# Add source to this project's executable.
add_executable (unique_lock "unique_lock.cpp" "unique_lock.h")

# TODO: Add tests and install targets if needed.
