# CMakeList.txt : CMake project for detach, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("detach")

# Add source to this project's executable.
add_executable (detach "detach.cpp" "detach.h")

# TODO: Add tests and install targets if needed.
