# CMakeList.txt : CMake project for get_id, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("get_id")

# Add source to this project's executable.
add_executable (get_id "get_id.cpp" "get_id.h")

# TODO: Add tests and install targets if needed.
