# CMakeList.txt : CMake project for thread, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("thread")

# Add source to this project's executable.
add_executable (thread "thread.cpp" "thread.h")

# TODO: Add tests and install targets if needed.
